# layout2

./: CMakeLists.txt  README.md
data/: example_layers.txt
scripts/: bindkeys.tcl  init.example.tcl  init.tcl  transcript_filters.tcl
src/: EditorSessionController.cpp  EditorSessionController.h  LayerManager.cpp  LayerManager.h  LayoutEditorWindow.cpp  LayoutEditorWindow.h  LayoutGeometry.h  LayoutSceneModel.cpp  LayoutSceneModel.h  SelectionPropertiesDialog.cpp  SelectionPropertiesDialog.h  TclConsoleWindow.cpp  TclConsoleWindow.h  TclFormDialog.cpp  TclFormDialog.h  main.cpp
